--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,11 +11,12 @@
 }
 
 html {
-  width: fit-content;
+  width: 100%;
 }
 
 body {
-  width: fit-content;
+  width: 100%;
+  min-width: 320px;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -moz-user-select: none;
@@ -204,21 +205,17 @@ a {
     gap: 24px;
   }
 
-  .menu-last-item {
-    border: 3px solid #ec5242;
-    padding: 10px;
-    margin: 10px;
-    color: #ec5242;
-  }
-
   .desktop-menu h4:hover {
     color: #ec5242;
   }
 
   .header-section {
     width: 100%;
-    background-image: url("../src/background2.png");
-    background-size: cover;
+    background-image: url("../src/atlanta.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 500px;
   }
 
   .header {
@@ -260,8 +257,10 @@ a {
   background-color: #272a31;
   font-family: "Lato", sans-serif;
   align-items: center;
-  background-image: url("../src/main-bg.png");
-  background-repeat: repeat;
+  background-image: url("../src/atlanta2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   padding-top: 70px;
 }
 
@@ -411,7 +410,7 @@ a {
 /* Desktop version of the events section */
 @media only screen and (min-width: 768px) {
   .events {
-    /* width: fit-content; */
+    width: 100%;
   }
 
   .events h3 {
