--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -107,15 +107,15 @@ a {
 }
 
 .header h1 {
-  background-image: url("../src/background.png");
   font-family: "COCOGOOSE", sans-serif;
   font-size: 30px;
   margin: 0 0 15px 0;
-  background-size: cover;
-  background-position: center;
-  -webkit-text-fill-color: transparent;
-  background-clip: inherit;
-  -webkit-background-clip: text;
+  color: #7A0019 !important;
+  -webkit-text-fill-color: #7A0019 !important;
+  background: none !important;
+  background-image: none !important;
+  background-clip: unset !important;
+  -webkit-background-clip: unset !important;
 }
 
 .header p {
@@ -231,6 +231,12 @@ a {
   .header h1 {
     font-size: 60px;
     margin: 0 0 15px 0;
+    color: #7A0019 !important;
+    -webkit-text-fill-color: #7A0019 !important;
+    background: none !important;
+    background-image: none !important;
+    background-clip: unset !important;
+    -webkit-background-clip: unset !important;
   }
 
   .header p {
