--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -571,7 +571,7 @@ a {
   padding: 0 10px 40px 10px; */
 }
 
-/* Mobile version of the guests section */
+/* Mobile version of the guests section - Organization uses simple static list */
 .guests2 {
   display: flex;
   flex-direction: column;
@@ -581,6 +581,44 @@ a {
   padding-top: 70px;
   width: 100%;
 }
+
+/* Simple Organization List Styling - No hover effects */
+ul[data-columns="2"] {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+ul[data-columns="2"] li {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #2c3e50;
+  padding: 10px 0;
+  border-bottom: 1px solid #e8e9ea;
+}
+
+ul[data-columns="2"] br {
+  display: none;
+}
+
+/* Mobile responsive for simple organization list */
+@media (max-width: 768px) {
+  ul[data-columns="2"] {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+  
+  ul[data-columns="2"] li {
+    font-size: 14px;
+    padding: 8px 0;
+  }
+}
+
 .guests2 h2 {
   margin: 30px 0 0 0;
   color: #272a31;
@@ -604,6 +642,7 @@ a {
   color: #272a31;
 
 }
+/* Default guests2 ul styling is overridden by data-columns attribute styling above */
 .guests2 ul {
   -webkit-column-count: 2;
   -moz-column-count: 2;
